; ModuleID = '/home/carl/AnghaBench/lab/engine/code/botlib/extr_be_aas_main.c_AAS_LoadFiles.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/botlib/extr_be_aas_main.c_AAS_LoadFiles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_3__ = type { i32 (i32, i8*, i8*)* }

@MAX_QPATH = common dso_local global i32 0, align 4
@aasworld = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@.str = private unnamed_addr constant [12 x i8] c"maps/%s.aas\00", align 1
@BLERR_NOERROR = common dso_local global i32 0, align 4
@botimport = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@PRT_MESSAGE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c"loaded %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AAS_LoadFiles(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %8 = load i32, i32* @MAX_QPATH, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @aasworld, i32 0, i32 1), align 4
  %13 = load i8*, i8** %3, align 8
  %14 = call i32 @Q_strncpyz(i32 %12, i8* %13, i32 4)
  %15 = call i32 (...) @AAS_ResetEntityLinks()
  %16 = call i32 (...) @AAS_LoadBSPFile()
  %17 = trunc i64 %9 to i32
  %18 = load i8*, i8** %3, align 8
  %19 = call i32 @Com_sprintf(i8* %11, i32 %17, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8* %18)
  %20 = call i32 @AAS_LoadAASFile(i8* %11)
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* @BLERR_NOERROR, align 4
  %23 = icmp ne i32 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %1
  %25 = load i32, i32* %4, align 4
  store i32 %25, i32* %2, align 4
  store i32 1, i32* %7, align 4
  br label %33

26:                                               ; preds = %1
  %27 = load i32 (i32, i8*, i8*)*, i32 (i32, i8*, i8*)** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @botimport, i32 0, i32 0), align 8
  %28 = load i32, i32* @PRT_MESSAGE, align 4
  %29 = call i32 %27(i32 %28, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i8* %11)
  %30 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @aasworld, i32 0, i32 0), align 4
  %31 = call i32 @Q_strncpyz(i32 %30, i8* %11, i32 4)
  %32 = load i32, i32* @BLERR_NOERROR, align 4
  store i32 %32, i32* %2, align 4
  store i32 1, i32* %7, align 4
  br label %33

33:                                               ; preds = %26, %24
  %34 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %34)
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @Q_strncpyz(i32, i8*, i32) #2

declare dso_local i32 @AAS_ResetEntityLinks(...) #2

declare dso_local i32 @AAS_LoadBSPFile(...) #2

declare dso_local i32 @Com_sprintf(i8*, i32, i8*, i8*) #2

declare dso_local i32 @AAS_LoadAASFile(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
